bench.iter(FnMut)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ rayon = "1.5.0"
 bencher = "0.1.5"
 lazy_static = "1.4.0"
 my_ext = { path = "./my_ext" }
+
+[[bench]]
+name = "clone"
+harness = false
